--- a/admin.html
+++ b/admin.html
@@ -5,45 +5,68 @@
   <title>Admin Dashboard</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       display: flex;
       height: 100vh;
+      background-color: #f5f3ef;
+      color: #4e342e;
     }
 
     .sidebar {
       width: 250px;
-      background-color: #2c3e50;
-      color: white;
+      background-color: #795548; /* màu nâu đậm */
+      color: #fff;
       padding: 20px;
       box-sizing: border-box;
     }
 
     .sidebar h2 {
-      font-size: 18px;
-      margin-bottom: 15px;
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
+    .sidebar p {
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+
+    .sidebar hr {
+      border: 0;
+      height: 1px;
+      background-color: #a1887f;
+      margin: 15px 0;
+    }
+
+    .sidebar h3 {
+      font-size: 16px;
+      margin: 20px 0 10px;
     }
 
     .sidebar button {
       display: block;
       width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #34495e;
+      margin: 6px 0;
+      padding: 10px 12px;
+      background-color: #a1887f; /* màu cà phê sữa */
       border: none;
-      color: white;
+      border-radius: 5px;
+      color: #fff;
       text-align: left;
       cursor: pointer;
+      transition: background-color 0.2s;
     }
 
     .sidebar button:hover {
-      background-color: #1abc9c;
+      background-color: #d7ccc8;
+      color: #4e342e;
     }
 
     .content {
       flex: 1;
-      padding: 20px;
+      padding: 30px;
       box-sizing: border-box;
+      overflow-y: auto;
     }
 
     .hidden {
@@ -51,12 +74,24 @@
     }
 
     a {
-      color: #3498db;
+      color: #ffccbc;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
+    }
+
+    .content h1, .content h2 {
+      color: #5d4037;
+    }
+
+    .section {
+      background-color: #fffaf4;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+      margin-bottom: 20px;
     }
   </style>
 </head>
@@ -117,43 +152,38 @@
       <p>Chỉnh sửa thông tin khách hàng...</p>
     </div>
 
-    <div id="welcome">
+    <div id="welcome" class="section">
       <h1>Chào mừng đến Admin Dashboard</h1>
       <p>Chọn một mục từ thanh điều hướng để bắt đầu.</p>
     </div>
   </div>
- <script>
-  const role = localStorage.getItem('role');
-  const adminName = localStorage.getItem('userName') || 'Admin';
 
-  if (role !== 'admin') {
-    alert('Bạn không có quyền truy cập');
-    window.location.href = '/index.html';
-  }
+  <script>
+    const role = localStorage.getItem('role');
+    const adminName = localStorage.getItem('userName') || 'Admin';
 
-  document.getElementById('admin-name').textContent = adminName;
+    if (role !== 'admin') {
+      alert('Bạn không có quyền truy cập');
+      window.location.href = '/index.html';
+    }
 
-  function logout() {
-    localStorage.clear();
-    window.location.href = '/login.html';
-  }
+    document.getElementById('admin-name').textContent = adminName;
 
-  function showSection(sectionId) {
-    // Ẩn tất cả các section
-    const sections = document.querySelectorAll('.section');
-    sections.forEach(section => {
-      section.classList.add('hidden');
-    });
+    function logout() {
+      localStorage.clear();
+      window.location.href = '/login.html';
+    }
 
-    // Ẩn cả phần welcome nếu đang hiện
-    const welcome = document.getElementById('welcome');
-    if (welcome) welcome.style.display = 'none';
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll('.section');
+      sections.forEach(section => section.classList.add('hidden'));
 
-    // Hiện section được chọn
-    const target = document.getElementById(sectionId);
-    if (target) target.classList.remove('hidden');
-  }
-</script>
+      document.getElementById('welcome').style.display = 'none';
+
+      const target = document.getElementById(sectionId);
+      if (target) target.classList.remove('hidden');
+    }
+  </script>
 
 </body>
 </html>
