--- a/sidebar.html
+++ b/sidebar.html
@@ -1,6 +1,6 @@
 <h2>📋 Menu</h2>
 <ul>
-  <li><button onclick="loadPage('content/products.html')">📦 Sản phẩm</button></li>
+  <li><button onclick="loadPage('content/product.html')">📦 Sản phẩm</button></li>
   <li><button onclick="loadPage('content/product-add.html')">➕ Thêm sản phẩm</button></li>
   <li><button onclick="loadPage('content/orders.html')">🧾 Đơn hàng</button></li>
   <li><button onclick="loadPage('content/customers.html')">👤 Khách hàng</button></li>
