--- a/content/product-add.html
+++ b/content/product-add.html
@@ -3,7 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <title>Thêm sản phẩm</title>
- 
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 30px;
+      background-color: #fdf6ec;
+    }
+
+    h1 {
+      color: #6b4f3b;
+    }
+
+    form {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 500px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    input[type="text"],
+    input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    #drop-zone {
+      margin-top: 10px;
+      padding: 20px;
+      border: 2px dashed #bbb;
+      text-align: center;
+      color: #888;
+      border-radius: 6px;
+      background-color: #fff8f0;
+    }
+
+    #drop-zone.hover {
+      border-color: #888;
+      background-color: #f0e8de;
+    }
+
+    #preview {
+      margin-top: 10px;
+      max-width: 100%;
+      height: auto;
+      display: none;
+      border: 1px solid #ccc;
+      padding: 4px;
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #6b4f3b;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #8d6e57;
+    }
+  </style>
 </head>
 <body>
   <h1>➕ Thêm sản phẩm mới</h1>
@@ -17,16 +88,21 @@
     <label>Số lượng</label>
     <input type="number" id="quantity" required>
 
-    <label>Tên ảnh minh họa</label>
-    <input type="text" id="images" placeholder="abc.jpg">
+    <label>Ảnh minh họa (dán link hoặc kéo ảnh vào)</label>
+    <input type="text" id="images" placeholder="https://..." required>
+
+    <div id="drop-zone">📥 Kéo và thả ảnh vào đây</div>
+    <img id="preview" src="#" alt="Ảnh minh họa">
 
     <button type="submit">Thêm</button>
   </form>
 
   <script>
     const token = localStorage.getItem('token');
+
     document.getElementById('product-form').addEventListener('submit', async (e) => {
       e.preventDefault();
+
       const name = document.getElementById('name').value;
       const price = document.getElementById('price').value;
       const quantity = document.getElementById('quantity').value;
@@ -48,6 +124,44 @@
       } else {
         alert('❌ Lỗi: ' + (result.message || 'Không thêm được sản phẩm'));
       }
+    });
+
+    // Xử lý kéo và thả ảnh
+    const dropZone = document.getElementById('drop-zone');
+    const imageInput = document.getElementById('images');
+    const preview = document.getElementById('preview');
+
+    dropZone.addEventListener('dragover', (e) => {
+      e.preventDefault();
+      dropZone.classList.add('hover');
+    });
+
+    dropZone.addEventListener('dragleave', () => {
+      dropZone.classList.remove('hover');
+    });
+
+    dropZone.addEventListener('drop', (e) => {
+      e.preventDefault();
+      dropZone.classList.remove('hover');
+
+      const file = e.dataTransfer.files[0];
+      if (file && file.type.startsWith('image/')) {
+        const reader = new FileReader();
+        reader.onload = function (event) {
+          imageInput.value = event.target.result;
+          preview.src = event.target.result;
+          preview.style.display = 'block';
+        };
+        reader.readAsDataURL(file);
+      } else {
+        alert('Vui lòng thả một tệp ảnh.');
+      }
+    });
+
+    // Tự xem trước ảnh nếu nhập URL trực tiếp
+    imageInput.addEventListener('input', () => {
+      preview.src = imageInput.value;
+      preview.style.display = imageInput.value ? 'block' : 'none';
     });
   </script>
 </body>
