--- a/content/customer-edit.html
+++ b/content/customer-edit.html
@@ -4,43 +4,118 @@
   <meta charset="UTF-8">
   <title>Chỉnh sửa khách hàng</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 500px; margin: auto; }
-    input { width: 100%; padding: 10px; margin: 10px 0; }
-    label { font-weight: bold; display: block; }
-    button { padding: 10px 20px; margin-top: 15px; }
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .container {
+      background-color: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      width: 100%;
+      max-width: 500px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #5a3e36;
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: 600;
+      color: #333;
+    }
+
+    input[type="text"],
+    input[type="email"] {
+      width: 100%;
+      padding: 12px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      transition: border-color 0.3s;
+    }
+
+    input:focus {
+      border-color: #a9826d;
+      outline: none;
+    }
+
+    button {
+      margin-top: 25px;
+      width: 100%;
+      padding: 12px;
+      background-color: #6b4f3b;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #8d6e57;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>✏️ Chỉnh sửa khách hàng</h1>
-  <form id="edit-form">
-    <label>Email</label>
-    <input type="email" id="email" disabled>
+  <div class="container">
+    <h1>✏️ Chỉnh sửa khách hàng</h1>
+    <form id="edit-form">
+      <label for="email">Email</label>
+      <input type="email" id="email" disabled>
 
-    <label>Họ tên</label>
-    <input type="text" id="fullName">
+      <label for="fullName">Họ tên</label>
+      <input type="text" id="fullName">
 
-    <label>Số điện thoại</label>
-    <input type="text" id="phone">
+      <label for="phone">Số điện thoại</label>
+      <input type="text" id="phone">
 
-    <label>Địa chỉ</label>
-    <input type="text" id="address">
+      <label for="address">Địa chỉ</label>
+      <input type="text" id="address">
 
-    <button type="submit">Cập nhật</button>
-  </form>
+      <button type="submit">✅ Cập nhật</button>
+    </form>
+  </div>
 
   <script>
-   
     const id = new URLSearchParams(window.location.search).get('id');
+    const token = localStorage.getItem('token'); // Thêm dòng này nếu bạn dùng token trong localStorage
 
     async function fetchCustomer() {
-      const res = await fetch(`https://backend-7j0i.onrender.com/customers/${id}`, {
-        headers: { Authorization: `Bearer ${token}` }
-      });
-      const c = await res.json();
-      document.getElementById('email').value = c.email;
-      document.getElementById('fullName').value = c.fullName;
-      document.getElementById('phone').value = c.phone;
-      document.getElementById('address').value = c.address;
+      try {
+        const res = await fetch(`https://backend-7j0i.onrender.com/customers/${id}`, {
+          headers: { Authorization: `Bearer ${token}` }
+        });
+        const c = await res.json();
+        document.getElementById('email').value = c.email;
+        document.getElementById('fullName').value = c.fullName;
+        document.getElementById('phone').value = c.phone;
+        document.getElementById('address').value = c.address;
+      } catch (err) {
+        alert("❌ Lỗi khi tải dữ liệu khách hàng.");
+      }
     }
 
     document.getElementById('edit-form').addEventListener('submit', async (e) => {
@@ -50,16 +125,20 @@
         phone: document.getElementById('phone').value,
         address: document.getElementById('address').value
       };
-      await fetch(`https://backend-7j0i.onrender.com/customers/${id}`, {
-        method: 'PUT',
-        headers: {
-          'Content-Type': 'application/json',
-          Authorization: `Bearer ${token}`
-        },
-        body: JSON.stringify(updated)
-      });
-      alert('✅ Đã cập nhật khách hàng!');
-      window.location.href = 'customers.html';
+      try {
+        await fetch(`https://backend-7j0i.onrender.com/customers/${id}`, {
+          method: 'PUT',
+          headers: {
+            'Content-Type': 'application/json',
+            Authorization: `Bearer ${token}`
+          },
+          body: JSON.stringify(updated)
+        });
+        alert('✅ Đã cập nhật khách hàng!');
+        window.location.href = 'customers.html';
+      } catch (err) {
+        alert("❌ Lỗi khi cập nhật khách hàng.");
+      }
     });
 
     fetchCustomer();
