--- a/content/customers.html
+++ b/content/customers.html
@@ -6,74 +6,79 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f9;
+      background-color: #f9f6f3;
       padding: 40px;
-      max-width: 900px;
+      max-width: 1200px;
       margin: auto;
+      color: #4a2e20;
     }
 
     h1 {
       text-align: center;
-      color: #333;
+      color: #5a3928;
       margin-bottom: 30px;
     }
 
     input[type="text"] {
       padding: 12px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
       width: 100%;
-      max-width: 400px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      max-width: 500px;
+      border: 1px solid #c2b3a0;
+      border-radius: 6px;
       font-size: 16px;
       display: block;
       margin-left: auto;
       margin-right: auto;
+      background-color: #fff7f0;
     }
 
     table {
       border-collapse: collapse;
       width: 100%;
-      background-color: white;
-      border-radius: 10px;
+      background-color: #fffdfb;
+      border-radius: 12px;
       overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 6px 18px rgba(80, 60, 40, 0.15);
+      font-size: 17px;
     }
 
     th, td {
-      padding: 14px;
+      padding: 16px 20px;
       text-align: left;
+      border-bottom: 1px solid #e6d9ce;
     }
 
     th {
-      background-color: #007BFF;
-      color: white;
+      background-color: #a97458;
+      color: #fff;
+      font-weight: bold;
     }
 
     tr:nth-child(even) {
-      background-color: #f9f9f9;
+      background-color: #f7f1ec;
     }
 
     tr:hover {
-      background-color: #eef4ff;
+      background-color: #f0e7e0;
     }
 
     button {
-      background-color: #28a745;
+      background-color: #8b5e3c;
       color: white;
       border: none;
-      padding: 8px 14px;
+      padding: 10px 16px;
       border-radius: 6px;
       cursor: pointer;
+      font-size: 15px;
       transition: background-color 0.2s ease;
     }
 
     button:hover {
-      background-color: #218838;
+      background-color: #70482b;
     }
 
-    @media (max-width: 600px) {
-      body { padding: 20px; }
+    @media (max-width: 768px) {
       table, thead, tbody, th, td, tr {
         display: block;
       }
@@ -93,14 +98,12 @@
         position: absolute;
         left: 15px;
         width: 45%;
-        padding-left: 10px;
         font-weight: bold;
         text-align: left;
       }
 
       th {
-        background-color: #007BFF;
-        color: white;
+        background-color: #a97458;
       }
     }
   </style>
