--- a/content/orders.html
+++ b/content/orders.html
@@ -4,11 +4,90 @@
   <meta charset="UTF-8">
   <title>Đơn hàng</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; }
-    th { background-color: #f0f0f0; }
-    select { padding: 6px; margin-bottom: 10px; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 40px;
+      background: #f8f9fa;
+      max-width: 1000px;
+      margin: auto;
+      color: #333;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+      color: #2c3e50;
+    }
+
+    label {
+      font-weight: bold;
+      display: block;
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+
+    select {
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 15px;
+      width: 200px;
+      margin-bottom: 20px;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      background: white;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+
+    th, td {
+      padding: 12px 15px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #007bff;
+      color: white;
+      font-weight: bold;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    select:focus, button:focus {
+      outline: none;
+      border-color: #007bff;
+    }
+
+    button {
+      padding: 8px 16px;
+      background-color: #28a745;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #218838;
+    }
+
+    select[onchange] {
+      background-color: #f0f0f0;
+      border-color: #ccc;
+    }
+
+    .status-select {
+      width: 100%;
+      padding: 6px;
+      border-radius: 4px;
+    }
   </style>
 </head>
 <body>
@@ -27,15 +106,17 @@
   <table>
     <thead>
       <tr>
-        <th>Mã</th><th>Khách</th><th>Tổng</th><th>Trạng thái</th><th>Cập nhật</th>
+        <th>Mã</th>
+        <th>Khách hàng</th>
+        <th>Tổng tiền</th>
+        <th>Trạng thái</th>
+        <th>Hành động</th>
       </tr>
     </thead>
     <tbody id="orders"></tbody>
   </table>
 
   <script>
-    
-
     async function fetchOrders() {
       const res = await fetch('https://backend-7j0i.onrender.com/orders', {
         headers: { Authorization: `Bearer ${token}` }
@@ -54,17 +135,17 @@
         const tr = document.createElement('tr');
         tr.innerHTML = `
           <td>${o.orderCode}</td>
-          <td>${o.shippingAddress?.fullName}</td>
-          <td>${o.finalAmount}₫</td>
+          <td>${o.shippingAddress?.fullName || '-'}</td>
+          <td>${o.finalAmount.toLocaleString()}₫</td>
           <td>
-            <select onchange="updateStatus('${o._id}', this.value)">
-              <option ${o.orderStatus === 'PENDING' ? 'selected' : ''}>PENDING</option>
-              <option ${o.orderStatus === 'CONFIRMED' ? 'selected' : ''}>CONFIRMED</option>
-              <option ${o.orderStatus === 'SHIPPED' ? 'selected' : ''}>SHIPPED</option>
-              <option ${o.orderStatus === 'CANCELLED' ? 'selected' : ''}>CANCELLED</option>
+            <select class="status-select" onchange="updateStatus('${o._id}', this.value)">
+              <option value="PENDING" ${o.orderStatus === 'PENDING' ? 'selected' : ''}>PENDING</option>
+              <option value="CONFIRMED" ${o.orderStatus === 'CONFIRMED' ? 'selected' : ''}>CONFIRMED</option>
+              <option value="SHIPPED" ${o.orderStatus === 'SHIPPED' ? 'selected' : ''}>SHIPPED</option>
+              <option value="CANCELLED" ${o.orderStatus === 'CANCELLED' ? 'selected' : ''}>CANCELLED</option>
             </select>
           </td>
-          <td><button onclick="edit('${o._id}')">Sửa</button></td>
+          <td><button onclick="edit('${o._id}')">✏️ Sửa</button></td>
         `;
         tbody.appendChild(tr);
       });
