--- a/content/orders.html
+++ b/content/orders.html
@@ -7,16 +7,16 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       padding: 40px;
-      background: #f8f9fa;
+      background: #f3eee7;
       max-width: 1000px;
       margin: auto;
-      color: #333;
+      color: #4e342e;
     }
 
     h1 {
       text-align: center;
       margin-bottom: 30px;
-      color: #2c3e50;
+      color: #5d4037;
     }
 
     label {
@@ -29,44 +29,47 @@
     select {
       padding: 10px;
       border-radius: 5px;
-      border: 1px solid #ccc;
+      border: 1px solid #a1887f;
       font-size: 15px;
-      width: 200px;
-      margin-bottom: 20px;
+      width: 220px;
+      margin-bottom: 25px;
+      background-color: #efebe9;
+      color: #4e342e;
     }
 
     table {
       border-collapse: collapse;
       width: 100%;
-      background: white;
+      background: #ffffff;
       border-radius: 8px;
       overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 10px rgba(78, 52, 46, 0.1);
     }
 
     th, td {
-      padding: 12px 15px;
+      padding: 14px 18px;
       text-align: left;
     }
 
     th {
-      background-color: #007bff;
+      background-color: #6d4c41;
       color: white;
       font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
     }
 
     tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: #fbe9e7;
     }
 
-    select:focus, button:focus {
-      outline: none;
-      border-color: #007bff;
+    tr:hover {
+      background-color: #ffccbc;
     }
 
     button {
-      padding: 8px 16px;
-      background-color: #28a745;
+      padding: 8px 14px;
+      background-color: #8d6e63;
       border: none;
       color: white;
       border-radius: 4px;
@@ -75,18 +78,21 @@
     }
 
     button:hover {
-      background-color: #218838;
-    }
-
-    select[onchange] {
-      background-color: #f0f0f0;
-      border-color: #ccc;
+      background-color: #795548;
     }
 
     .status-select {
       width: 100%;
-      padding: 6px;
+      padding: 8px;
       border-radius: 4px;
+      border: 1px solid #a1887f;
+      background-color: #efebe9;
+      color: #4e342e;
+    }
+
+    select:focus, button:focus {
+      outline: none;
+      border-color: #6d4c41;
     }
   </style>
 </head>
